<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="text_my_study_groups">Meine Lerngruppen</string>
    <string name="text_new_study_groups">Neue Lerngruppen</string>
    <string name="text_empty_my_study_groups_list">Suche dir eine Lerngruppe aus</string>
    <string name="text_empty_new_study_groups_list">Erstelle eine Lerngruppe</string>
    <string name="text_warning_empty_field">Bitte fülle alle mit * markierten Felder aus!</string>


    <string name="subject">Fach:</string>
    <string name="place">Ort:</string>
    <string name="date">Datum:</string>
    <string name="time">Uhrzeit:</string>
    <string name="date_create_text">* Datum</string>
    <string name="time_create_text">* Uhrzeit</string>
    <string name="location_create_text">* Gib einen Treffpunkt an</string>
    <string name="comment_create_text">Hier ist Platz für Anmerkungen</string>
    <string name="notes">Anmerkungen:</string>
    <string name="sign_in">Gruppe beitreten</string>
    <string name="sign_out">Gruppe verlassen</string>
    <string name="participants">Teilnehmer:</string>

    <string name="key_fragment_transaction">StudyGroup</string>


    <string name="checkbox_monday">Mo</string>
    <string name="key_monday">Montag</string>
    <string name="checkbox_tuesday">Di</string>
    <string name="key_tuesday">Dienstag</string>
    <string name="checkbox_wednesday">Mi</string>
    <string name="key_wednesday">Mittwoch</string>
    <string name="checkbox_thursday">Do</string>
    <string name="key_thursday">Donnerstag</string>
    <string name="checkbox_friday">Fr</string>
    <string name="key_friday">Freitag</string>
    <string name="checkbox_saturday">Sa</string>
    <string name="key_saturday">Samstag</string>
    <string name="checkbox_sunday">So</string>
    <string name="key_sunday">Sonntag</string>
    <string name="key_subject">Fach</string>

    <string name="button_filter">Filter anwenden</string>



    <string-array name="modul_list">
        <item> * Wähle ein Modul </item>
        <item> Einführung in die Medieninformatik </item>
        <item> Einführung in die objektorientierte Programmierung </item>
        <item> Mathematik für Medieninformatiker 1 </item>
        <item> Grundlagen der Human-Computer-Interaction </item>
        <item> Mathematik für Medieninformatiker 2 </item>
        <item> Propädeutikum Medieninformatik </item>
        <item> Einführung in die Anwendungsprogrammierung mit Android </item>
        <item> Daten effizient speichern und verarbeiten </item>
        <item> Multimedia Technology </item>
        <item> Algorithmen und Datenstrukturen </item>
        <item> Multimedia Engineering </item>
        <item> Angewandte Medieninformatik 1 </item>
        <item> Usability Engineering </item>
        <item> Angewandte Medieninformatik 2 </item>
    </string-array>

    <string name="profile_toolbar_text">Mein Profil</string>
    <string name="home_toolbar_text">Home</string>
    <string name="my_group_toolbar_text">Meine Lerngruppen</string>
    <string name="find_group_toolbar_text">Finde Lerngruppe</string>
    <string name="create_group_toolbar_text">Erstelle Lerngruppe</string>
    <string name="settings_toolbar_text">Einstellungen</string>
    <string name="update_profile_successfull">Deine Änderungen wurden gespeichert.</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


    <!--strings: preferences-->
    <string name="preference_name">Preference</string>
    <string name="preference_explanation">Explanation</string>
    <string name="colorsettings_text">Farbeinstellungen</string>
    <string name="colorsettings_explanation_text">Schalte in den Darkmode oder ändere das Farbschema</string>
    <string name="notificationpreferences_text">Benachrichtigungseinstellungen</string>
    <string name="notificationpreferences_explanation_text">Wähle, welche Benachrichtigungen du bekommst</string>
    <string name="notification_group_name">Gruppenbeitritt</string>
    <string name="notification_reminder_name">Erinnerung</string>
    <string name="notification_group_explanation">Du wirst benachrichtigt, wenn jemand deiner Lerngruppe beitritt</string>
    <string name="notification_reminder_explanation">Du wirst 30min vor dem Treffpunkt deiner Lerngruppe benachrichtigt</string>

    <!--strings: preferences-->
    <string name="notification_title_join">Hey StudyBuddy!</string>
    <string name="notification_text_join">Jemand neues ist deiner Lerngruppe beigetreten.</string>
    <string name="notification_title_reminder">Auf geht´s!</string>
    <string name="notification_text_reminder">Deine Lerngruppe trifft sich in einer halben Stunde.</string>

    <!--strings: colors-->
    <string name="darkmode_text">Darkmode</string>
    <string name="change_explanation_text">Achtung! Es erfolgt ein automatischer Neustart der App.</string>
    <string-array name="color_list">
        <item>Farbschema ändern </item>
        <item>Faculty </item>
        <item>Ice </item>
        <item>Sun </item>
        <item>Fire </item>
        <item>Nature </item>
    </string-array>
    <string name="pref_color_key">ColorKey</string>
    <string name="pref_mode_key">ModeKey</string>
    <string name="pref_joinPermission_key">JoinPermissionKey</string>
    <string name="pref_reminderPermission_key">ReminderPermissionKey</string>


    <string name="update_button_text">Änderungen speichern</string>
    <string name="name_hint">Name: </string>
    <string name="age_hint">Alter: </string>

    <!--strings: Login-->
    <string name="email_hint">E-mail </string>
    <string name="password_hint">Password </string>
    <string name="login_Button">Login </string>
    <string name="toast_fill_Textentry">Please enter Email and Password</string>
    <string name="toast_check_entry">Überprüfe deine E-mail und dein Password(mindestens 6 Zeichen)</string>
    <string name="popup_title">Email existiert nicht</string>
    <string name="popup_text">Diese E-mail kennen wir nicht. Überprüfen Sie ihre Eingabe oder legen Sie ein neues Profil an</string>
    <string name="popup_rightButton">Registrieren</string>
    <string name="popup_leftButton">Zurück</string>

    <!--strings: Registrierung-->
    <string name="username_hint">*Username</string>
    <string name="ageRegistrierung_hint">*Alter</string>
    <string name="addPicture">Foto hinzufügen</string>
    <string name="next">Weiter</string>
    <string name="toast_no_Permission">Ohne die Erlaubnis kann leider kein Bild hinzugefügt werden</string>
    <string name="toast_set_age_name">Bitte trage deinen Usernamen,Alter und ein Profilbild ein</string>

    <!--strings: Database-->
    <string name="database_age">age</string>
    <string name="database_accounts">studygroups-Accounts</string>
    <string name="user_already_participant">Du nimmst bereit an der Lerngruppe teil</string>

</resources>
