<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_notificationpermissionJoin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/notification_group_name"
        android:textColor="?attr/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_button" />

    <TextView
        android:id="@+id/textView_notificationexplanationJoin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/hintcolor"
        android:text="@string/notification_group_explanation"
        app:layout_constraintEnd_toEndOf="@+id/switch_notificationpermissionJoin"
        app:layout_constraintStart_toStartOf="@+id/switch_notificationpermissionJoin"
        app:layout_constraintTop_toBottomOf="@+id/switch_notificationpermissionJoin" />

    <Switch
        android:id="@+id/switch_notificationpermissionReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="?attr/textcolor"
        android:text="@string/notification_reminder_name"
        app:layout_constraintEnd_toEndOf="@+id/textView_notificationexplanationJoin"
        app:layout_constraintStart_toStartOf="@+id/textView_notificationexplanationJoin"
        app:layout_constraintTop_toBottomOf="@+id/textView_notificationexplanationJoin" />

    <TextView
        android:id="@+id/textView_notificationexplanationReminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/hintcolor"
        android:text="@string/notification_reminder_explanation"
        app:layout_constraintEnd_toEndOf="@+id/switch_notificationpermissionReminder"
        app:layout_constraintStart_toStartOf="@+id/switch_notificationpermissionReminder"
        app:layout_constraintTop_toBottomOf="@+id/switch_notificationpermissionReminder" />

</androidx.constraintlayout.widget.ConstraintLayout>