<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creategroup_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_Modul"
        style="@android:style/Widget.Material.Light.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="?attr/primarycolor"
        android:entries="@array/modul_list"
        android:popupBackground="?attr/buttoncolor"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="?attr/primarycolor"
        android:ems="10"
        android:hint="@string/date_create_text"
        android:inputType="date"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hintcolor"
        app:layout_constraintBottom_toBottomOf="@+id/editText_Time"
        app:layout_constraintEnd_toStartOf="@+id/editText_Time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_Time"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText_Time"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="?attr/primarycolor"
        android:ems="10"
        android:hint="@string/time_create_text"
        android:inputType="time"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_Modul" />

    <EditText
        android:id="@+id/editText_Notes"
        android:layout_width="0dp"
        android:layout_height="89dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="?attr/primarycolor"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment_create_text"
        android:inputType="textMultiLine"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Location" />

    <EditText
        android:id="@+id/editText_Location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="?attr/primarycolor"
        android:ems="10"
        android:hint="@string/location_create_text"
        android:inputType="textPersonName"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hintcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Time" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_CreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="?attr/primarycolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>